changed tag browsing system to use page numbers in query string

--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -14,7 +14,7 @@
                 <a id='home-link' href='/'>Palette Place</a>
             </li>
             <li> 
-                <a id='search-link' href="/palettes/browse">Browse</a>
+                <a id='search-link' href="/palettes/browse?page=0">Browse</a>
             </li>
             {% if g.user %}
                 <li>
