--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -59,4 +59,5 @@
 
 {% block scripts %}
 <script src="/static/javascript/paletteCreate.js"></script>
+<script src="/static/javascript/tagSearch.js"></script>
 {% endblock %}
