--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -60,4 +60,5 @@
 {% block scripts %}
 <script src="/static/javascript/paletteCreate.js"></script>
 <script src="/static/javascript/tagSearch.js"></script>
+<script src="/static/javascript/checkLengths.js"></script>
 {% endblock %}
