searching by name, user, and tags functional

--- a/code/templates/palettes/browse.html
+++ b/code/templates/palettes/browse.html
@@ -31,6 +31,9 @@
                 </a>
             </div>
         {% endfor %}
+        {% if palettes|length == 0 %}
+            <p>No palettes found!</p>
+        {% endif %}
     </div>
     <br>
     <div id="more-button">
